fix: make tests OS agnostic
Some tests fail due to CRLF being used on Windows. Make tests OS
agnostic by converting CRLF to LF for comparison in tests.

Other changes:
- Use a new approach to reading file contents in FileSourceSupplier

Refs: #16